--- a/contador-tareas/src/App.css
+++ b/contador-tareas/src/App.css
@@ -1,42 +1,43 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+#inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+#main-container{
+  width: 35vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input {
+  height: 40px;
+  border-radius: 8px;
+  border-color: rgb(100, 100, 109);
+  border-style: solid;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  width: 100%;
+  margin-left: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+li {
+  width: 100%;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(54, 54, 63);
+  border-radius: 8px;
+  padding: 5px;
+  margin-bottom: 10px;
+ 
 }
